# backendResumeAi

./: .dockerIgnore  .gitignore  .railwayignore  AUTH.md  CUSTOM_VOICE_GUIDE.md  FRONTEND_OAUTH.md  RAILWAY_DEPLOYMENT.md  SPEED_OPTIMIZATIONS.md  auth.py  core_match.py  database.py  docker-compose.yml  interview_agent.py  llm.py  memory.py  models.py  pyproject.toml  reader.py  render.yaml  requirements.txt  server.py  speech.py
.github/workflows/: codeql.yml
routes/: auth_routes.py  oauth_routes.py
